--- a/NON-RESPONSIVE/NETFLIX/Netflix.html
+++ b/NON-RESPONSIVE/NETFLIX/Netflix.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
 
     <link rel="shortcut icon"
@@ -19,6 +19,7 @@
 
 <body>
 
+    <header>
     <header>
         <div class="banner">
 
@@ -114,7 +115,7 @@
         <section id="faque">
 
             <h2 class="faq">Frequently &nbsp;&nbsp;Asked&nbsp;&nbsp;Questions</h2>
-
+            
             <div class="information">
 
                 <details>
@@ -124,7 +125,7 @@
                         anime, documentaries and more – on thousands of internet-connected devices.
                         <br><br>
 
-                        You can watch as much as you want, whenever you want, without a single ad – all for one low
+                        You can watch as much as you want, whenever you want, without a single ad  all for one low
                         monthly price. There's always something new to discover, and new TV shows and movies are added
                         every week!
                     </p>
