--- a/PSD/Restarunt/Restarunt.html
+++ b/PSD/Restarunt/Restarunt.html
@@ -31,6 +31,19 @@
 
       </ul>
 
+      <details>
+
+        <summary>☰</summary>
+
+      <ul id="navlinks2">
+        <li><a href="">Home</a></li>
+        <li><a href="">Menu</a></li>
+        <li><a href="">About Us </a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+
+    </details>
+
       <a href="">Sign Up</a>
 
 
